--- a/allim/allimApp/templates/lecture_detail.html
+++ b/allim/allimApp/templates/lecture_detail.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>{{ lecture.topic }}</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
 </head>
 <body class="bg-gray-100 p-8 font-sans">
   <div class="max-w-3xl mx-auto bg-white p-6 rounded shadow">
