--- a/allim/allimApp/static/allimApp/css/login.css
+++ b/allim/allimApp/static/allimApp/css/login.css
@@ -1,12 +1,12 @@
 body {
 
     margin: 0;
-    filter: blur(px);
     font-family: sans-serif;
 }
 .vh-100{
     background: linear-gradient(135deg, #d9ecf9, #eaf6ff);
     height: auto !important; 
+    padding: 20px;
 }
 
 .wrapper {
