--- a/allim/allimApp/templates/add_lecture.html
+++ b/allim/allimApp/templates/add_lecture.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Add Lecture - {{ course.course_name }}</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="max-w-3xl mx-auto mt-10 bg-white p-8 rounded shadow">
