--- a/allim/allimApp/templates/all_courses.html
+++ b/allim/allimApp/templates/all_courses.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>All Courses</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
 </head>
 <body>
 
