--- a/allim/allimApp/templates/chatbot.html
+++ b/allim/allimApp/templates/chatbot.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>ChatBot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
     <style>
         body { background-color: #f8f9fa; }
         #chat-box {
