--- a/allim/allimApp/templates/edit_student_profile.html
+++ b/allim/allimApp/templates/edit_student_profile.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Edit Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="flex h-screen">
