--- a/allim/allimApp/templates/registration.html
+++ b/allim/allimApp/templates/registration.html
@@ -7,6 +7,7 @@
     <title>Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
     <link rel="stylesheet" href="{% static 'allimApp/css/registration.css' %}">
 </head>
 
