--- a/allim/allimApp/templates/add_course.html
+++ b/allim/allimApp/templates/add_course.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Create Course</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans">
