--- a/allim/allimApp/templates/add_lecture.html
+++ b/allim/allimApp/templates/add_lecture.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Add Lecture - {{ course.course_name }}</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans">
