--- a/allim/allimApp/templates/all_courses.html
+++ b/allim/allimApp/templates/all_courses.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>All Courses</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
