--- a/allim/allimApp/templates/index.html
+++ b/allim/allimApp/templates/index.html
@@ -19,10 +19,10 @@
                 <a class="navbar-brand me-4" href="#">
                     <img src="{% static 'allimApp/img/Logo.png' %}" alt="Logo" class="logo-img" id="logo"/>
                   </a>
-                  <form class="search-con">
+                  <!-- <form class="search-con">
                     <input class="custom-search" type="search" placeholder="Search" aria-label="Search">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                  </form>
+                  </form> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -204,7 +204,7 @@
           </div>
        
           <div class="review-slider-wrapper">
-            <button class="review-arrow left" onclick="slideReviews(-1)">&#10094;</button>
+            <!-- <button class="review-arrow left" onclick="slideReviews(-1)">&#10094;</button> -->
        
             <div class="review-slider" id="reviewSlider">
               <div class="review-card">
@@ -318,7 +318,7 @@
             </div>
            
        
-            <button class="review-arrow right" onclick="slideReviews(1)">&#10095;</button>
+            <!-- <button class="review-arrow right" onclick="slideReviews(1)">&#10095;</button> -->
           </div>
         </section>
  
