--- a/allim/allimApp/templates/lecture_detail.html
+++ b/allim/allimApp/templates/lecture_detail.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>{{ lecture.topic }}</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 p-8 font-sans">
